--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	
 	<!-- Local CSS -->
-	<link rel="stylesheet" href="/assets/styles/main.css">
+	<link rel="stylesheet" href="assets/styles/main.css">
 
 	<title>Ocean NFT</title>
 </head>
@@ -66,7 +66,7 @@
 								</div>
 							</div>
 						
-							<a class="nft_create" href="#">Create NFT’s</a>
+							<a class="nft_create text-nowrap" href="#">Create NFT’s</a>
 						</div>
 
 						<div class="d-flex p-0 mt-5">
@@ -84,7 +84,10 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-5 p-0">Col-5</div>
+
+					<div class="col-5 p-0">
+						<img class="text-center" src="assets/img/mask_hero.svg" alt="">
+					</div>
 				</div>
 			</section>
 		</main>
