Hero is done - v0.9

--- a/index копія.html
+++ b/index копія.html
@@ -94,54 +94,51 @@
 
 						<div class="nft_hero_bid_shadow"></div>
 						<div class="nft_hero_bid">
-							<div class="nft_hero_bid1">
-
-								<div class="row nft_hero_bid_details">
-									<div class="col ps-0 pe-4">
-										<p class="nft_hero_artname m-0">3D Abstract Hand</p>
-										<div class="d-flex align-items-baseline">
-											<div class="pe-1"><img src="assets/img/icons/icon_user_01.png" width="28.74px" height="28.74px" alt="User's Icon"></div>
-											<p class="nft_hero_nickname m-0 pe-1">@jhonartist</p>
-											<div><img src="assets/img/icons/icon_user_checked.png" width="12.16px" height="13.27px" alt="User checked"></div>
-										</div>
-										<p class="nft_hero_theme_title">Reserve price</p>
-										<div class="d-flex align-items-baseline">
-											<div class="nft_hero_logo_ethereum"><img src="assets/img/logos/logo_ethereum_white.svg" width="19.44px" height="19.44px" alt="Ethereum"></div>
-											<p class="nft_hero_price_ethereum m-0">ETH 9.31</p>
-											<p class="nft_hero_price_usd m-0">($29,8846)</p>
-										</div>
-									</div>
-		
-									<div class="col p-0">
-										<p class="nft_hero_theme_title m-0">Auction Ends in</p>
-										<div class="d-flex">
-											<div>
-												<p class="nft_hero_auction_time">18</p>
-												<p class="nft_hero_auction_time_unit">Hours</p>
-											</div>
-											<div class="px-4">
-												<p class="nft_hero_auction_time">25</p>
-												<p class="nft_hero_auction_time_unit">Mins</p>
-											</div>
-											<div>
-												<p class="nft_hero_auction_time">44</p>
-												<p class="nft_hero_auction_time_unit">Secs</p>
-											</div>
-										</div>
-										<a class="nft_nodecor_white" href="#">
-											<div class="d-flex nft_hero_placebid_btn_border">
-												<div class="d-flex nft_hero_placebid_btn">
-													<p class="nft_hero_placebid m-0">Place Bid</p>
-													<img src="assets/img/arrow_hero.svg" width="24.32px" height="9.22" alt="Go!">
-												</div>
-											</div>
-										</a>
-									</div>
-								</div>
-							</div>
+							<div class="nft_hero_bid1"></div>
 						</div>
 
-						
+						<div class="row nft_hero_bid_details">
+							<div class="col ps-0 pe-4">
+								<p class="nft_hero_artname m-0">3D Abstract Hand</p>
+								<div class="d-flex align-items-baseline">
+									<div class="pe-1"><img src="assets/img/icons/icon_user_01.png" width="28.74px" height="28.74px" alt="User's Icon"></div>
+									<p class="nft_hero_nickname m-0 pe-1">@jhonartist</p>
+									<div><img src="assets/img/icons/icon_user_checked.png" width="12.16px" height="13.27px" alt="User checked"></div>
+								</div>
+								<p class="nft_hero_theme_title">Reserve price</p>
+								<div class="d-flex align-items-baseline">
+									<div class="nft_hero_logo_ethereum"><img src="assets/img/logos/logo_ethereum_white.svg" width="19.44px" height="19.44px" alt="Ethereum"></div>
+									<p class="nft_hero_price_ethereum m-0">ETH 9.31</p>
+									<p class="nft_hero_price_usd m-0">($29,8846)</p>
+								</div>
+							</div>
+
+							<div class="col p-0">
+								<p class="nft_hero_theme_title m-0">Auction Ends in</p>
+								<div class="d-flex">
+									<div>
+										<p class="nft_hero_auction_time">18</p>
+										<p class="nft_hero_auction_time_unit">Hours</p>
+									</div>
+									<div class="px-4">
+										<p class="nft_hero_auction_time">25</p>
+										<p class="nft_hero_auction_time_unit">Mins</p>
+									</div>
+									<div>
+										<p class="nft_hero_auction_time">44</p>
+										<p class="nft_hero_auction_time_unit">Secs</p>
+									</div>
+								</div>
+								<a class="nft_nodecor_white" href="#">
+									<div class="d-flex nft_hero_placebid_btn_border">
+										<div class="d-flex nft_hero_placebid_btn">
+											<p class="nft_hero_placebid m-0">Place Bid</p>
+											<img src="assets/img/arrow_hero.svg" width="24.32px" height="9.22" alt="Go!">
+										</div>
+									</div>
+								</a>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
