Hero is done - v0.9.1

--- a/index.html
+++ b/index.html
@@ -140,9 +140,16 @@
 								</div>
 							</div>
 						</div>
-
-						
 					</div>
+				</div>
+			</section>
+
+			<section class="container p-0">
+				<div class="d-flex nft_partners justify-content-between align-items-center">
+					<a href=""><img src="assets/img/logos/logo_binance_100.svg" alt="Binance"></a>
+					<a href=""><img src="assets/img/logos/logo_ethereum_100.svg" alt="Ethereum"></a>
+					<a href=""><img src="assets/img/logos/logo_blockchain-io_100.svg" alt="Blockchain.io"></a>
+					<a href=""><img src="assets/img/logos/logo_bitmex_100.svg" alt="Bitmex"></a>
 				</div>
 			</section>
 		</main>
