--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
 			<section class="container p-0">
 				<div class="d-flex nft_partners justify-content-between align-items-center">
-					<a href=""><img src="assets/img/logos/logo_binance_100.svg" alt="Binance"></a>
-					<a href=""><img src="assets/img/logos/logo_ethereum_100.svg" alt="Ethereum"></a>
-					<a href=""><img src="assets/img/logos/logo_blockchain-io_100.svg" alt="Blockchain.io"></a>
-					<a href=""><img src="assets/img/logos/logo_bitmex_100.svg" alt="Bitmex"></a>
+					<a href="#" class="pe-3 py-3"><img src="assets/img/logos/logo_binance_100.svg" alt="Binance"></a>
+					<a href="#" class="p-3"><img src="assets/img/logos/logo_ethereum_100.svg" alt="Ethereum"></a>
+					<a href="#" class="p-3"><img src="assets/img/logos/logo_blockchain-io_100.svg" alt="Blockchain.io"></a>
+					<a href="#" class="ps-3 py-3"><img src="assets/img/logos/logo_bitmex_100.svg" alt="Bitmex"></a>
 				</div>
 			</section>
 		</main>
