Semi-transparency issue resolved
See frozen-glass.html & frozen-style.css sample files

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
 									<div class="col ps-0 pe-4">
 										<p class="nft_hero_artname m-0">3D Abstract Hand</p>
 										<div class="d-flex align-items-baseline">
-											<div class="pe-1"><img src="assets/img/icons/icon_user_01.png" width="28.74px" height="28.74px" alt="User's Icon"></div>
+											<div class="pe-1"><img src="assets/img/icons/icon_user_small.png" width="28.74px" height="28.74px" alt="User's Icon"></div>
 											<p class="nft_hero_nickname m-0 pe-1">@jhonartist</p>
-											<div><img src="assets/img/icons/icon_user_checked.png" width="12.16px" height="13.27px" alt="User checked"></div>
+											<div><img src="assets/img/icons/icon_user_checked_small.png" width="12.16px" height="13.27px" alt="User checked"></div>
 										</div>
 										<p class="nft_hero_theme_title">Reserve price</p>
 										<div class="d-flex align-items-baseline">
@@ -150,6 +150,75 @@
 					<a href="#" class="p-3"><img src="assets/img/logos/logo_ethereum_100.svg" alt="Ethereum"></a>
 					<a href="#" class="p-3"><img src="assets/img/logos/logo_blockchain-io_100.svg" alt="Blockchain.io"></a>
 					<a href="#" class="ps-3 py-3"><img src="assets/img/logos/logo_bitmex_100.svg" alt="Bitmex"></a>
+				</div>
+			</section>
+
+			<section class="container p-0">
+				<div class="d-flex justify-content-between align-items-center">
+					<h2>Top NFT's now</h2>
+					<div class="d-flex">
+						<a class="nft_nodecor_white" href="#">
+							<span class="nft_view_all pe-2">View all</span>
+							<span class="align-text-bottom"><img src="assets/img/arrow_right.svg" width="51.96px" height="26.53px" alt="View all"></span>
+						</a>
+					</div>
+				</div>
+
+				<div class="row gy-5 m-0 nft_white">
+					<div class="col ps-0 pe-3">
+						<div class="nft_topnow">
+							<img src="assets/img/top_nft_01.png" alt="Top NFT #1">
+						</div>
+						<div class="nft_topnow_bid_border">
+							<div class="row nft_topnow_bid_details">
+								<div class="col-7 ps-0 pe-4">
+									<p class="nft_topnow_artname m-0">Apollo Eth #1289 NFT</p>
+									<div class="d-flex align-items-baseline">
+										<div class="pe-1"><img src="assets/img/icons/icon_user_01.png" width="37.44px" height="37.44px" alt="User's Icon"></div>
+										<p class="nft_topnow_nickname m-0 pe-1">@jhonartist</p>
+										<div><img src="assets/img/icons/icon_user_checked.png" width="15.84px" height="17.28px" alt="User checked"></div>
+									</div>
+									<p class="nft_topnow_theme_title">Reserve price</p>
+									<div class="d-flex align-items-baseline">
+										<div class="nft_topnow_logo_ethereum"><img src="assets/img/logos/logo_ethereum_white.svg" width="25.32px" height="25.32px" alt="Ethereum"></div>
+										<p class="nft_topnow_price_ethereum m-0">ETH 9.31</p>
+										<p class="nft_topnow_price_usd m-0">($29,8846)</p>
+									</div>
+								</div>
+
+								<div class="col-5 d-flex flex-column align-items-center p-0">
+									<div>
+										<span class="nft_topnow_theme_title m-0">Auction Ends in</span>
+										<div class="d-flex">
+											<div>
+												<p class="nft_topnow_auction_time">18</p>
+												<p class="nft_topnow_auction_time_unit">Hours</p>
+											</div>
+											<div class="px-4">
+												<p class="nft_topnow_auction_time">25</p>
+												<p class="nft_topnow_auction_time_unit">Mins</p>
+											</div>
+											<div>
+												<p class="nft_topnow_auction_time">44</p>
+												<p class="nft_topnow_auction_time_unit">Secs</p>
+											</div>
+										</div>
+									</div>
+									<a class="nft_nodecor_white" href="#">
+										<div class="d-flex nft_topnow_placebid_btn_border">
+											<div class="d-flex nft_topnow_placebid_btn">
+												<p class="nft_topnow_placebid m-0">Place Bid</p>
+												<img src="assets/img/arrow_topnow.svg" width="31.22px" height="12.01" alt="Go!">
+											</div>
+										</div>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="col px-3">Item #2</div>
+					<div class="col ps-3 pe-0">Item #3</div>
 				</div>
 			</section>
 		</main>
