--- a/index.html
+++ b/index.html
@@ -13,36 +13,38 @@
 
 	<title>Ocean NFT</title>
 </head>
-<body>
-	<div class="container-fluid p-0">
+<body class="px-0 pb-5">
+	<div class="container-fluid">
 
-		<header class="container p-0">
-			<nav class="navbar navbar-expand-md p-0">
-				<div class="container-fluid p-0">
-					<a class="navbar-brand" href="#">
-						<img class="d-inline-block align-text-top nft_logo" src="assets/img/logos/logo_top.svg" alt="OceanNFT Logo">
-						Ocean<span class="nft_brand">NFT</span>
-					</a>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации">
-						<span class="navbar-toggler-icon"></span>
-					</button>
+		<header class="container-fluid fixed-top py-4 px-0">
+			<div class="container">
+				<nav class="navbar navbar-expand-md p-0">
+					<div class="container-fluid p-0">
+						<a class="navbar-brand" href="#">
+							<img class="d-inline-block align-text-top nft_logo" src="assets/img/logos/logo_top.svg" alt="OceanNFT Logo">
+							Ocean<span class="nft_brand">NFT</span>
+						</a>
+						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Переключатель навигации">
+							<span class="navbar-toggler-icon"></span>
+						</button>
 
-					<div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
-						<div class="nft_spacer"></div>
+						<div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
+							<div class="nft_spacer"></div>
 
-						<div class="navbar-nav">
-							<a class="nav-link px-xl-5 px-sm-4" href="#">Market</a>
-							<a class="nav-link px-xl-5 px-sm-4" href="#">Features</a>
-							<a class="nav-link px-xl-5 px-sm-4" href="#">Community</a>
-						</div>
-						
-						<div class="navbar-nav">
-							<a class="nav-link ps-xl-5 ps-sm-4" href="#"><img src="assets/img/icons/icon_cart.svg" alt="Your Cart"></a>
-							<a class="nav-link ps-xl-5 ps-sm-4" href="#"><img src="assets/img/icons/icon_user.svg" alt="Your Account"></a>
+							<div class="navbar-nav">
+								<a class="nav-link px-xl-5 px-sm-4" href="#">Market</a>
+								<a class="nav-link px-xl-5 px-sm-4" href="#">Features</a>
+								<a class="nav-link px-xl-5 px-sm-4" href="#">Community</a>
+							</div>
+							
+							<div class="navbar-nav">
+								<a class="nav-link ps-xl-5 ps-sm-4" href="#"><img src="assets/img/icons/icon_cart.svg" alt="Your Cart"></a>
+								<a class="nav-link ps-xl-5 ps-sm-4" href="#"><img src="assets/img/icons/icon_user.svg" alt="Your Account"></a>
+							</div>
 						</div>
 					</div>
-				</div>
-			</nav>
+				</nav>
+			</div>
 		</header>
 
 		<main>
@@ -88,16 +90,23 @@
 					<div class="col-5 p-0 position-relative">
 						<div class="d-flex mx-4 justify-content-center">
 							<div class="nft_hero_bid_mask">
-								<img src="assets/img/bid_02.gif" alt="">
+								<svg width="402" height="478" viewBox="0 0 402 478" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<defs>
+										<mask id="nft_hero_mask">
+											<path d="M0.495148 459.677V72.555C0.495148 66.7097 3.38306 61.2419 8.21086 57.9465L88.5373 3.11643C91.4758 1.11059 94.951 0.0375977 98.5089 0.0375977H384.09C393.858 0.0375977 401.777 7.9565 401.777 17.725V417.559C401.777 423.166 399.119 428.44 394.613 431.776L337.713 473.893C334.667 476.147 330.978 477.364 327.19 477.364H18.1825C8.41404 477.364 0.495148 469.445 0.495148 459.677Z" fill="white"/>
+										</mask>
+									</defs>
+									<image mask="url(#nft_hero_mask)" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="assets/img/bid_02.gif" height="478"></image>
+								</svg>
 							</div>
 						</div>
 
 						<div class="nft_hero_bid_shadow"></div>
-						<div class="nft_hero_bid">
-							<div class="nft_hero_bid1">
+						<div class="nft_hero_bid_polygon_blured">
+							<div class="nft_hero_bid_polygon_gradient">
 
-								<div class="row nft_hero_bid_details">
-									<div class="col ps-0 pe-4">
+								<div class="d-flex nft_hero_bid_content justify-content-between mt-2">
+									<div class="p-0">
 										<p class="nft_hero_artname m-0">3D Abstract Hand</p>
 										<div class="d-flex align-items-baseline">
 											<div class="pe-1"><img src="assets/img/icons/icon_user_small.png" width="28.74px" height="28.74px" alt="User's Icon"></div>
@@ -112,7 +121,7 @@
 										</div>
 									</div>
 		
-									<div class="col p-0">
+									<div class="p-0">
 										<p class="nft_hero_theme_title m-0">Auction Ends in</p>
 										<div class="d-flex">
 											<div>
@@ -169,49 +178,51 @@
 						<div class="nft_topnow">
 							<img src="assets/img/top_nft_01.png" alt="Top NFT #1">
 						</div>
-						<div class="nft_topnow_bid_border">
-							<div class="row nft_topnow_bid_details">
-								<div class="col-7 ps-0 pe-4">
-									<p class="nft_topnow_artname m-0">Apollo Eth #1289 NFT</p>
-									<div class="d-flex align-items-baseline">
-										<div class="pe-1"><img src="assets/img/icons/icon_user_01.png" width="37.44px" height="37.44px" alt="User's Icon"></div>
-										<p class="nft_topnow_nickname m-0 pe-1">@jhonartist</p>
-										<div><img src="assets/img/icons/icon_user_checked.png" width="15.84px" height="17.28px" alt="User checked"></div>
+						<div class="nft_topnow_bid_blured">
+							<div class="nft_topnow_bid_gradient">
+								<div class="row nft_topnow_bid_content">
+									<div class="col-7 ps-0 pe-4">
+										<p class="nft_topnow_artname m-0">Apollo Eth #1289 NFT</p>
+										<div class="d-flex align-items-baseline">
+											<div class="pe-1"><img src="assets/img/icons/icon_user_01.png" width="37.44px" height="37.44px" alt="User's Icon"></div>
+											<p class="nft_topnow_nickname m-0 pe-1">@jhonartist</p>
+											<div><img src="assets/img/icons/icon_user_checked.png" width="15.84px" height="17.28px" alt="User checked"></div>
+										</div>
+										<p class="nft_topnow_theme_title">Reserve price</p>
+										<div class="d-flex align-items-baseline">
+											<div class="nft_topnow_logo_ethereum"><img src="assets/img/logos/logo_ethereum_white.svg" width="25.32px" height="25.32px" alt="Ethereum"></div>
+											<p class="nft_topnow_price_ethereum m-0">ETH 9.31</p>
+											<p class="nft_topnow_price_usd m-0">($29,8846)</p>
+										</div>
 									</div>
-									<p class="nft_topnow_theme_title">Reserve price</p>
-									<div class="d-flex align-items-baseline">
-										<div class="nft_topnow_logo_ethereum"><img src="assets/img/logos/logo_ethereum_white.svg" width="25.32px" height="25.32px" alt="Ethereum"></div>
-										<p class="nft_topnow_price_ethereum m-0">ETH 9.31</p>
-										<p class="nft_topnow_price_usd m-0">($29,8846)</p>
-									</div>
-								</div>
 
-								<div class="col-5 d-flex flex-column align-items-center p-0">
-									<div>
-										<span class="nft_topnow_theme_title m-0">Auction Ends in</span>
-										<div class="d-flex">
-											<div>
-												<p class="nft_topnow_auction_time">18</p>
-												<p class="nft_topnow_auction_time_unit">Hours</p>
-											</div>
-											<div class="px-4">
-												<p class="nft_topnow_auction_time">25</p>
-												<p class="nft_topnow_auction_time_unit">Mins</p>
-											</div>
-											<div>
-												<p class="nft_topnow_auction_time">44</p>
-												<p class="nft_topnow_auction_time_unit">Secs</p>
+									<div class="col-5 d-flex flex-column align-items-center p-0">
+										<div>
+											<span class="nft_topnow_theme_title m-0">Auction Ends in</span>
+											<div class="d-flex">
+												<div>
+													<p class="nft_topnow_auction_time">18</p>
+													<p class="nft_topnow_auction_time_unit">Hours</p>
+												</div>
+												<div class="px-4">
+													<p class="nft_topnow_auction_time">25</p>
+													<p class="nft_topnow_auction_time_unit">Mins</p>
+												</div>
+												<div>
+													<p class="nft_topnow_auction_time">44</p>
+													<p class="nft_topnow_auction_time_unit">Secs</p>
+												</div>
 											</div>
 										</div>
+										<a class="nft_nodecor_white" href="#">
+											<div class="d-flex nft_topnow_placebid_btn_border">
+												<div class="d-flex nft_topnow_placebid_btn">
+													<p class="nft_topnow_placebid m-0">Place Bid</p>
+													<img src="assets/img/arrow_topnow.svg" width="31.22px" height="12.01" alt="Go!">
+												</div>
+											</div>
+										</a>
 									</div>
-									<a class="nft_nodecor_white" href="#">
-										<div class="d-flex nft_topnow_placebid_btn_border">
-											<div class="d-flex nft_topnow_placebid_btn">
-												<p class="nft_topnow_placebid m-0">Place Bid</p>
-												<img src="assets/img/arrow_topnow.svg" width="31.22px" height="12.01" alt="Go!">
-											</div>
-										</div>
-									</a>
 								</div>
 							</div>
 						</div>
@@ -219,6 +230,15 @@
 
 					<div class="col px-3">Item #2</div>
 					<div class="col ps-3 pe-0">Item #3</div>
+				</div>
+			</section>
+
+			<section class="container p-0">
+				<div class="d-flex nft_partners justify-content-between align-items-center">
+					<a href="#" class="pe-3 py-3"><img src="assets/img/logos/logo_binance_100.svg" alt="Binance"></a>
+					<a href="#" class="p-3"><img src="assets/img/logos/logo_ethereum_100.svg" alt="Ethereum"></a>
+					<a href="#" class="p-3"><img src="assets/img/logos/logo_blockchain-io_100.svg" alt="Blockchain.io"></a>
+					<a href="#" class="ps-3 py-3"><img src="assets/img/logos/logo_bitmex_100.svg" alt="Bitmex"></a>
 				</div>
 			</section>
 		</main>
