Minor general improvements

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<title>Ocean NFT</title>
 </head>
 <body class="px-0 pb-5">
-	<div class="container-fluid">
+	<div class="container-fluid p-0">
 
 		<header class="container-fluid fixed-top py-4 px-0">
-			<div class="container">
+			<div class="container p-0">
 				<nav class="navbar navbar-expand-md p-0">
 					<div class="container-fluid p-0">
 						<a class="navbar-brand" href="#">
@@ -163,7 +163,7 @@
 			</section>
 
 			<section class="container p-0">
-				<div class="d-flex justify-content-between align-items-center">
+				<div class="d-flex justify-content-between align-items-center mb-5">
 					<h2>Top NFT's now</h2>
 					<div class="d-flex">
 						<a class="nft_nodecor_white" href="#">
@@ -173,8 +173,9 @@
 					</div>
 				</div>
 
-				<div class="row gy-5 m-0 nft_white">
-					<div class="col ps-0 pe-3">
+				<div class="d-flex nft_white justify-content-between">
+					<!-- Top NFT's Now - Item #1 -->
+					<div>
 						<div class="nft_topnow">
 							<img src="assets/img/top_nft_01.png" alt="Top NFT #1">
 						</div>
@@ -228,8 +229,115 @@
 						</div>
 					</div>
 
-					<div class="col px-3">Item #2</div>
-					<div class="col ps-3 pe-0">Item #3</div>
+					<!-- Top NFT's Now - Item #2 -->
+					<div class="px-4">
+						<div class="nft_topnow">
+							<img src="assets/img/top_nft_02.png" alt="Top NFT #2">
+						</div>
+						<div class="nft_topnow_bid_blured">
+							<div class="nft_topnow_bid_gradient">
+								<div class="row nft_topnow_bid_content">
+									<div class="col-7 ps-0 pe-4">
+										<p class="nft_topnow_artname m-0">Sassy Bull #1169 Art</p>
+										<div class="d-flex align-items-baseline">
+											<div class="pe-1"><img src="assets/img/icons/icon_user_02.png" width="37.44px" height="37.44px" alt="User's Icon"></div>
+											<p class="nft_topnow_nickname m-0 pe-1">@jhonartist</p>
+											<div><img src="assets/img/icons/icon_user_checked.png" width="15.84px" height="17.28px" alt="User checked"></div>
+										</div>
+										<p class="nft_topnow_theme_title">Reserve price</p>
+										<div class="d-flex align-items-baseline">
+											<div class="nft_topnow_logo_ethereum"><img src="assets/img/logos/logo_ethereum_white.svg" width="25.32px" height="25.32px" alt="Ethereum"></div>
+											<p class="nft_topnow_price_ethereum m-0">ETH 9.31</p>
+											<p class="nft_topnow_price_usd m-0">($29,8846)</p>
+										</div>
+									</div>
+
+									<div class="col-5 d-flex flex-column align-items-center p-0">
+										<div>
+											<span class="nft_topnow_theme_title m-0">Auction Ends in</span>
+											<div class="d-flex">
+												<div>
+													<p class="nft_topnow_auction_time">09</p>
+													<p class="nft_topnow_auction_time_unit">Hours</p>
+												</div>
+												<div class="px-4">
+													<p class="nft_topnow_auction_time">15</p>
+													<p class="nft_topnow_auction_time_unit">Mins</p>
+												</div>
+												<div>
+													<p class="nft_topnow_auction_time">23</p>
+													<p class="nft_topnow_auction_time_unit">Secs</p>
+												</div>
+											</div>
+										</div>
+										<a class="nft_nodecor_white" href="#">
+											<div class="d-flex nft_topnow_placebid_btn_border">
+												<div class="d-flex nft_topnow_placebid_btn">
+													<p class="nft_topnow_placebid m-0">Place Bid</p>
+													<img src="assets/img/arrow_topnow.svg" width="31.22px" height="12.01" alt="Go!">
+												</div>
+											</div>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- Top NFT's Now - Item #3 -->
+					<div>
+						<div class="nft_topnow">
+							<img src="assets/img/top_nft_03.png" alt="Top NFT #3">
+						</div>
+						<div class="nft_topnow_bid_blured">
+							<div class="nft_topnow_bid_gradient">
+								<div class="row nft_topnow_bid_content">
+									<div class="col-7 ps-0 pe-4">
+										<p class="nft_topnow_artname m-0">Satisfying 3D Art</p>
+										<div class="d-flex align-items-baseline">
+											<div class="pe-1"><img src="assets/img/icons/icon_user_03.png" width="37.44px" height="37.44px" alt="User's Icon"></div>
+											<p class="nft_topnow_nickname m-0 pe-1">@jhonartist</p>
+											<div><img src="assets/img/icons/icon_user_checked.png" width="15.84px" height="17.28px" alt="User checked"></div>
+										</div>
+										<p class="nft_topnow_theme_title">Reserve price</p>
+										<div class="d-flex align-items-baseline">
+											<div class="nft_topnow_logo_ethereum"><img src="assets/img/logos/logo_ethereum_white.svg" width="25.32px" height="25.32px" alt="Ethereum"></div>
+											<p class="nft_topnow_price_ethereum m-0">ETH 9.31</p>
+											<p class="nft_topnow_price_usd m-0">($29,8846)</p>
+										</div>
+									</div>
+
+									<div class="col-5 d-flex flex-column align-items-center p-0">
+										<div>
+											<span class="nft_topnow_theme_title m-0">Auction Ends in</span>
+											<div class="d-flex">
+												<div>
+													<p class="nft_topnow_auction_time">23</p>
+													<p class="nft_topnow_auction_time_unit">Hours</p>
+												</div>
+												<div class="px-4">
+													<p class="nft_topnow_auction_time">32</p>
+													<p class="nft_topnow_auction_time_unit">Mins</p>
+												</div>
+												<div>
+													<p class="nft_topnow_auction_time">56</p>
+													<p class="nft_topnow_auction_time_unit">Secs</p>
+												</div>
+											</div>
+										</div>
+										<a class="nft_nodecor_white" href="#">
+											<div class="d-flex nft_topnow_placebid_btn_border">
+												<div class="d-flex nft_topnow_placebid_btn">
+													<p class="nft_topnow_placebid m-0">Place Bid</p>
+													<img src="assets/img/arrow_topnow.svg" width="31.22px" height="12.01" alt="Go!">
+												</div>
+											</div>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 
