Minor adaptive added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div class="container-fluid p-0">
 
 		<header class="container-fluid fixed-top py-4 px-0">
-			<div class="container p-0">
+			<div class="container-lg p-lg-0 px-4">
 				<nav class="navbar navbar-expand-md p-0">
 					<div class="container-fluid p-0">
 						<a class="navbar-brand" href="#">
@@ -48,9 +48,9 @@
 		</header>
 
 		<main>
-			<section class="container hero p-0">
+			<section class="container-lg hero p-lg-0 px-4">
 				<div class="row m-0 pb-4">
-					<div class="col-7 p-0">
+					<div class="col-xl-7 col-lg-6 p-lg-0">
 						<h1>Discover, collect, and sell <span>Timeless</span> NFTs</h1>
 						<p class="nft_intro">The world’s first and largest digital marketplace for crypto collectibles and non-fungible tokens (NFTs)</p>
 						
@@ -87,10 +87,10 @@
 						</div>
 					</div>
 
-					<div class="col-5 p-0 position-relative">
+					<div class="col-xl-5 col-lg-6 p-0 position-relative">
 						<div class="d-flex mx-4 justify-content-center">
 							<div class="nft_hero_bid_mask">
-								<svg width="402" height="478" viewBox="0 0 402 478" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<svg viewBox="0 0 402 478" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<defs>
 										<mask id="nft_hero_mask">
 											<path d="M0.495148 459.677V72.555C0.495148 66.7097 3.38306 61.2419 8.21086 57.9465L88.5373 3.11643C91.4758 1.11059 94.951 0.0375977 98.5089 0.0375977H384.09C393.858 0.0375977 401.777 7.9565 401.777 17.725V417.559C401.777 423.166 399.119 428.44 394.613 431.776L337.713 473.893C334.667 476.147 330.978 477.364 327.19 477.364H18.1825C8.41404 477.364 0.495148 469.445 0.495148 459.677Z" fill="white"/>
@@ -153,7 +153,7 @@
 				</div>
 			</section>
 
-			<section class="container p-0">
+			<section class="container-lg p-lg-0 px-4">
 				<div class="d-flex nft_partners justify-content-between align-items-center">
 					<a href="#" class="pe-3 py-3"><img src="assets/img/logos/logo_binance_100.svg" alt="Binance"></a>
 					<a href="#" class="p-3"><img src="assets/img/logos/logo_ethereum_100.svg" alt="Ethereum"></a>
@@ -162,7 +162,7 @@
 				</div>
 			</section>
 
-			<section class="container p-0">
+			<section class="container-lg p-lg-0 px-4">
 				<div class="d-flex justify-content-between align-items-center mb-5">
 					<h2>Top NFT's now</h2>
 					<div class="d-flex">
@@ -341,7 +341,7 @@
 				</div>
 			</section>
 
-			<section class="container p-0">
+			<section class="container-lg p-lg-0 px-4">
 				<div class="d-flex nft_partners justify-content-between align-items-center">
 					<a href="#" class="pe-3 py-3"><img src="assets/img/logos/logo_binance_100.svg" alt="Binance"></a>
 					<a href="#" class="p-3"><img src="assets/img/logos/logo_ethereum_100.svg" alt="Ethereum"></a>
